# speer-rust-chat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: app.rs  constants.rs  ffi.rs  files.rs  main.rs  net.rs  protocol.rs  rendezvous.rs  tui.rs  util.rs
